# Parsiphae

./: .gitignore  Cargo.toml  LICENSE  README.md  Readme.md
src/: ast.rs  ast_converter.rs  config.rs  dat.rs  error_handler.rs  errors.rs  json.rs  lexer.rs  lib.rs  main.rs  main.rs_  processor.rs  src_parser.rs  typechecker.rs  walker.rs
src/diagnostics/: diagnostics.rs  error_handler.rs  mod.rs
src/file/: db.rs  mod.rs
src/handwritten_parsers/: decl.rs  expression.rs  func.rs  mod.rs  parser.rs  statement.rs  util.rs
src/inner_errors/: mod.rs  parser_error.rs
src/parser/: decl.rs  errors.rs  expression.rs  func.rs  mod.rs  parser.rs  statement.rs  util.rs
src/parsers/: base.rs  declaration.rs  identifier.rs  mod.rs  replacements.rs  statement_parsers.rs  util.rs
src/parsers/decl/: class.rs  constant.rs  declaration.rs  func.rs  instance.rs  mod.rs  prototype.rs  var_decl.rs
src/parsers/exp/: binary.rs  binary_old.rs  call.rs  expression.rs  mod.rs  unary.rs  value.rs  var_access.rs
src/parsers/statement/: assignment.rs  if_clause.rs  mod.rs  statement.rs
src/ppa/: errors.rs  mod.rs  symbol_collector.rs  typecheck.rs  visitor.rs
src/symbols/: bytecode.rs  collector.rs  mod.rs  zCPar_Symbol.rs  zSymb_Table.rs
src/tests/: decl.rs  mod.rs  utility.rs
src/types/: base.rs  mod.rs  printable.rs
src/types/decl/: constant.rs  declaration.rs  func.rs  instance.rs  mod.rs  var.rs
src/types/exp/: binary_expression.rs  binary_operator.rs  call.rs  expression.rs  mod.rs  unary_expression.rs  unary_operator.rs  var_access.rs
src/types/statement/: assignment.rs  if_clause.rs  mod.rs  statement.rs
src/types/symbol/: collection.rs  externals.rs  mod.rs  parsed.rs
tests/: extract_externals.rs  test_parse.rs  test_process.rs  test_tek.rs
tests/input/: Ikarus.d  errors.d  self_contained.d
tests/input/bereinigte_skripte/: Gothic.src
tests/input/bereinigte_skripte/AI/Human/: TA.d
tests/input/bereinigte_skripte/AI/Magic/: B_ReadySpell.d  B_SelectSpell.d  C_CanNpcCollideWithSpell.d
tests/input/bereinigte_skripte/Items/: IT_Addon_Food.d  IT_Addon_Misc.d  IT_Addon_Written.d  IT_Addon_Written.d.bak  IT_Armor.d  IT_Food.d  IT_Keys.d  IT_Misc.d  IT_Plants.d  IT_Written.d  MissionItems_1.d  MissionItems_2.d  MissionItems_3.d  MissionItems_4.d  MissionItems_5.d  MissionItems_6.d  MissionItems_Addon.d
tests/input/bereinigte_skripte/Story/: NPC_Globals.d  Startup.d  XP_Constants.d
tests/input/bereinigte_skripte/Story/B_AssignAmbientInfos/: B_AssignAmbientInfos.d  B_AssignToughGuyNews.d
tests/input/bereinigte_skripte/Story/B_Content/: B_Beklauen.d  B_BeliarsWeaponSpecialDamage.d  B_Extro_AVI.d  B_GhostSpecialDamage.d
tests/input/bereinigte_skripte/Story/B_Story/: B_Enter_AddonWorld.d  (+10 more)
tests/input/collection/: Classes.d  Constants.d
tests/output/: Ikarus.ast  Ikarus.tok
(+51 files in other folders)
