[package]
name = "parsiphae"
version = "0.3.0"
authors = ["Leon von Mulert <leonvonmulert@gmail.com>"]
exclude = [".idea/*"]
description = "A crate for parsing and analysing the scripting language Daedalus from the game Gothic (2)."
repository = "https://github.com/Lehona/Parsiphae"
homepage = "https://forum.worldofplayers.de/forum/threads/1525026-WIP-Tool-Parsiphae"
readme = "Readme.md"
keywords = ["gothic", "daedalus", "parser", "compiler"]
categories = ["parser-implementations"]
license = "MIT"
edition = "2021"

[dependencies]
clap = "2.32.0"
encoding = "0.2.33"
glob = "0.2.11"
lazy_static = "1.0.1"
time = "0.1"
derive_more = "0.13.0"
anyhow = "1.0.34"
codespan-reporting = "0.11.1"
env_logger = "0.11.2"
log = "0.4.20"
itertools = "0.12.1"
serde = { version = "1.0.196", features = ["derive"] }
serde_json = "1.0.113"

